ci/policy-tests/kyverno/baseline/disallow-host-ports/pod-hostport-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: hostport-workload
  namespace: default
spec:
  restartPolicy: Always
  containers:
  - name: app
    image: ghcr.io/example/app:1.0.0
    ports:
    - containerPort: 8080
      hostPort: 8080
